client/app/remote-control/keyboard/keyboard.component.scss
:host {
  position: relative;
  margin-top: 1rem;
  user-select: none;

  .input {
    display: block;
    padding: 1rem;
    min-width: 0;
    width: 100%;
    border: 0;
    border-radius: .5rem;
    background: #57565c;
    color: #acabb1;
  }

  .recent {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    pointer-events: none;
  }
}

